fixed white space for spash for tablet vw

--- a/frontend/src/components/Homepage/Homepage.css
+++ b/frontend/src/components/Homepage/Homepage.css
@@ -108,7 +108,8 @@ body{
 
 #text-container {
   margin-left: 125px;
-  margin: -200px auto 0 auto;
+  margin: 0 auto;
+  /* margin: -200px auto 0 auto; */
   width: 90vw;
 }
 
@@ -116,4 +117,10 @@ body{
   overflow: auto;
 }
 
+}
+
+@media screen and (max-width: 550px) {
+  #text-container {
+    margin: -200px auto 0 auto;
+  }
 }
